Implemented instrumentation with OpenTelemetry and Jaeger

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,34 @@
 version: '3.9'
 
+networks:
+  meu-racha-network:
+    driver: bridge
 volumes:
   postgresql_data:
 services:
+  app:
+    container_name: meu-racha-api
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+    volumes:
+      - .:/app
+      - /app/node_modules
+    command: npm run start:dev
+    environment:
+      NODE_ENV: development
+      DB_USER: postgres
+      DB_PASSWORD: root
+      DB_NAME: meu-racha
+      DB_PORT: 5432
+      DB_SERVER: db
+    depends_on:
+      - db
+      - jaeger
+    networks:
+      - meu-racha-network
   db:
     image: postgres
     container_name: meu-racha-db
@@ -16,3 +42,30 @@ services:
       - "54320:5432"
     volumes:
       - postgresql_data:/var/lib/postgresql/data
+    networks:
+      - meu-racha-network
+  jaeger:
+    image: jaegertracing/all-in-one:latest
+    container_name: jaeger
+    ports:
+      - "8081:16686"  # Jaeger UI
+      - "14268"
+      - "14250"
+    networks:
+      - meu-racha-network
+  otel-collector:
+    image: otel/opentelemetry-collector:latest
+    container_name: otel-collector
+    command: ["--config=/etc/otel-collector-config.yml"]
+    volumes:
+      - ./otel-collector-config.yml:/etc/otel-collector-config.yml
+    ports:
+      - "1888:1888"   # pprof extension
+      - "13133:13133" # health_check extension
+      - "4317:4317"   # OTLP gRPC receiver
+      - "4318:4318"   # http gRPC receiver
+      - "55679:55679" # zpages extension
+    depends_on:
+      - jaeger
+    networks:
+      - meu-racha-network
