--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@opentelemetry/semantic-conventions": "^1.27.0",
     "dotenv": "^16.4.5",
     "pg": "^8.12.0",
+    "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20"
